corpus/cpp/three_way_comparison/case-01/snapshots/gcc15_plus/dual_sink_structured/render.ci.txt
src/main.cpp:6:18: error: three-way comparison (spaceship) operator error
help: ensure all members support <=> or provide a custom comparison operator
why: no match for 'operator<=>' (operand types are 'Widget' and 'Widget')
| src/main.cpp:6:18
|     return (left <=> right) == 0;
|                  ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output